--- a/src/NavBarStyle.css
+++ b/src/NavBarStyle.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: #A7C1D9; 
+    background-color: #DDA49D; 
     color: #f6f4e6;
     text-decoration: none;
     font-family: poppins, sans-serif;
@@ -8,29 +8,30 @@
     font-size: large;
 }
 .navbar-brand {
-    color: #F2A477;
-    margin-left: 5px
+    color: #03A6A6;
+    margin-left: 1px;
     
   }
   
   .nav-link {
-    color: #f6f4e6 !important;
+    color: #03A6A6 !important;
     padding: 1px;
   }
 
 /* 
 Colors from book palette:
-#BFCDD9 - pale blue grey
-#A7C1D9 - light blue
-#023859 - deep blue
-#011826 - very dark blue
-#023859 - navy
-#F2F2F0 - white tan grey ?
-#F2C3A7 - light light peach
-#F2A477 - apricot
-#556773 - a darker stone grey 
-#F2C49B - light orange tan
-#F29863 - orange
-
-at one point margin-left on the navbar brand was 7px
+#DDA49D - taupey pink
+#93C4C9 - light light blue
+#F37A65 - coral ish
+#D9043D - candy red
+#037F8C - dark Teal
+#03A6A6 - bright teal
+#078C03 - bright green
+#F25E3D - carrot red
+#D90452 - hot pink
+#C1D6D9 - light light blue (like a blue grey white almost)
+#D98B48 - muted orange
+#73022C - like a jammy red
+#A3BFBF - almost robins egg blue
+#014029 - dark green
 */
