--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,9 @@ body {
   background-attachment: fixed;
   overflow: hidden;
   color: #f6f4e6;
+  font-family: "josefin-sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
  }
 
  .MainBody {
